Table Users {
  id integer [pk, increment] // auto-increment
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [not null, unique] // validate email
  username varchar [not null, unique]
  hashed_password varchar [not null]
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp [default: 'CURRENT_TIMESTAMP']
}

Table Groups {
  id integer [pk, increment] // auto-increment
  organizer_id integer [ref: > Users.id, not null]
  name varchar [not null] // max: 60
  about varchar [not null] // min: 50
  type varchar [not null] // isIn: ['Online', 'In person']
  private boolean [not null] // isBoolean
  city varchar [not null] // first leter capitalized
  state varchar [not null] // first leter capitalized
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp [default: 'CURRENT_TIMESTAMP']
}

Table GroupImages {
  id integer [pk, increment] // auto-increment
  group_id integer [ref: > Groups.id, not null]
  url varchar [not null, unique] // isUrl
  preview boolean [not null] // isBoolean
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp [default: 'CURRENT_TIMESTAMP']
}

Table Venues {
  id integer [pk, increment] // auto-increment
  group_id integer [ref: > Groups.id, not null]
  address varchar [not null]
  city varchar [not null] // first leter capitalized
  state varchar [not null] // first leter capitalized
  lat decimal [not null] // dec: [10, 7], min: -90, max: 90
  lng decimal [not null] // dec: [10, 7], min: -180, max: 180
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp [default: 'CURRENT_TIMESTAMP']
}

Table Events {
  id integer [pk, increment] // auto-increment
  group_id integer [ref: > Groups.id, not null]
  venue_id integer [ref: > Venues.id, not null]
  name varchar [not null] // min: 5
  type varchar [not null] // isIn: ['Online', 'In person']
  capacity integer [not null] // isInt
  price decimal [not null] // dec: [6, 2]
  description varchar [not null]
  start_date timestamp [not null] // must be in future
  end_date timestamp [not null]  // must be after startDate
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp [default: 'CURRENT_TIMESTAMP']
}

Table EventImages {
  id integer [pk, increment] // auto-increment
  event_id integer [ref: > Events.id, not null]
  url varchar [not null, unique] // isUrl
  preview boolean [not null] // isBoolean
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp [default: 'CURRENT_TIMESTAMP']
}

Table Members {
  id integer [pk, increment] // auto-increment
  user_id integer [ref: > Users.id, not null]
  group_id integer [ref: > Groups.id, not null]
  status varchar [not null, default: 'pending'] // isIn ['co-host', 'member', 'pending']
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp [default: 'CURRENT_TIMESTAMP']
}

Table Attendees {
  id integer [pk, increment] // auto-increment
  event_id integer [ref: > Events.id, not null]
  user_id integer [ref: > Users.id, not null]
  status varchar [not null, default: 'pending'] // isIn ['attending', 'waitlist', 'pending']
  created_at timestamp [default: 'CURRENT_TIMESTAMP']
  updated_at timestamp [default: 'CURRENT_TIMESTAMP']
}
